Correctly align table entries vertically

--- a/styles/brackets-git.less
+++ b/styles/brackets-git.less
@@ -118,6 +118,9 @@
     .toolbar {
         overflow: visible;
     }
+    .git-edited-list td {
+        vertical-align: middle;
+    }
     tr.selected {
         font-weight: 400;
     }
